Fix major visibility bug for fs

--- a/src/components/Fullscreen.scss
+++ b/src/components/Fullscreen.scss
@@ -13,7 +13,6 @@
     visibility: hidden;
 
     .anim-panel {
-        // animation: p1 5s forwards;
         position: relative;
         border-radius: 15px;
         background-color: rgb(237, 138, 33);
@@ -28,7 +27,7 @@
         margin-left: 10.4%;
         margin-top: 6.5%;
 
-        opacity: 1;
+        // opacity: 1;
         // visibility: hidden;
         
         .buttons-container {
