--- a/src/components/MenuContainer.scss
+++ b/src/components/MenuContainer.scss
@@ -70,12 +70,6 @@ $hudheight: 25%;
                                 border: 0.3rem solid rgb(31, 206, 255);
                             }
 
-                            // element that will be animated
-                            #panel-zoom {
-                                animation-name: panel-zoom;
-                                animation-duration: 4s;
-                                
-                            }
                         }                        
                     }
                 }
