--- a/src/partials/_animations.scss
+++ b/src/partials/_animations.scss
@@ -11,7 +11,6 @@
     }
     50% {
         opacity: 1;
-        visibility: visible;
     }
     100% {
         opacity: 1;
@@ -39,22 +38,29 @@
     to {background: rgb(216, 216, 216);}
 }
 
-@keyframes text-zoom {
+@keyframes text-grow {
     0% {font-size: 0px;}
     10% {font-size: 0.5rem;}
     90% {font-size: 3rem;}
     100% {font-size: 3rem;}
 }
 
-@keyframes transition-opacity {
-    from {
-        visibility: visible;
-    }
-    to {
-        opacity: 1;
-        visibility: visible;
-    }
+@keyframes text-shrink {
+    0% {font-size: 3rem;}
+    10% {font-size: 3rem;}
+    90% {font-size: 0.5rem;}
+    100% {font-size: 0px;}
 }
+
+// @keyframes transition-opacity {
+//     from {
+//         visibility: visible;
+//     }
+//     to {
+//         opacity: 1;
+//         visibility: visible;
+//     }
+// }
 
 @keyframes hide-panels {
     0% {
